# turul-mcp-framework

./: .gitignore  ADR-CompileTime-Schema-Generation.md  ADR-JsonSchema-Standardization.md  ADR-SessionContext-Macro-Support.md  ADR-SessionStorage-Architecture.md  ADR_HYBRID_NOTIFICATION_ARCHITECTURE.md  AGENTS.md  BROKEN_EXAMPLES_STATUS.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATED_ROADMAP.md  CORRECTED_IMPLEMENTATION_PLAN.md  Cargo.toml  DELETE_NEW_OUTSTANDING_ITEMS.md  DELETE_PHASE_BASED_TODO.md  DOCUMENTATION_TESTING.md  EXAMPLES.md  EXAMPLES_LEARNING_GUIDE.md  EXAMPLES_OVERVIEW.md  EXAMPLES_SUMMARY.md  EXAMPLE_FIX_GUIDE.md  EXAMPLE_VERIFICATION_LOG.md  FRAMEWORK_ARCHITECTURE_GAPS.md  FRAMEWORK_COMPLETED_FIXES.md  FRAMEWORK_VALIDATION_SUCCESS.md  FUNCTION_MACRO_DEBUG_NOTES.md  GEMINI.md  HISTORY.md  HTTP_400_INVESTIGATION.md  IMPLEMENTATION_ROADMAP.md  LEARNING_PATH.md  MCP_E2E_COMPLIANCE_TEST_PLAN.md  MCP_SESSION_ARCHITECTURE.md  MIDDLEWARE_STATUS.md  MIGRATION_0.2.1.md  NEW_OUTSTANDING_ITEMS.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_BASED_TODO.md  README.md  RELEASE_NOTES_0.2.0.md  (+14 more)
crates/http-mcp-server/: Cargo.toml
crates/http-mcp-server/src/: cors.rs  handler.rs  json_rpc_responses.rs  lib.rs  notification_bridge.rs  protocol.rs  server.rs  session_handler.rs  sse.rs  stream_manager.rs  streamable_http.rs
crates/json-rpc-server/: Cargo.toml
crates/json-rpc-server/examples/: simple_calculator.rs
crates/json-rpc-server/src/: async.rs  dispatch.rs  error.rs  lib.rs  notification.rs  types.rs
crates/mcp-builders/: Cargo.toml
crates/mcp-builders/src/: completion.rs  elicitation.rs  lib.rs  logging.rs  message.rs  notification.rs  prompt.rs  resource.rs  root.rs  tool.rs
crates/mcp-protocol/: Cargo.toml
crates/mcp-protocol/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/examples/: client-initialise-report.rs  client-initialise-server.rs
crates/mcp-server/src/: builder.rs  completion.rs  elicitation.rs  handlers.rs  http.rs  lib.rs  logging.rs  notifications.rs  prompt.rs  resource.rs  roots.rs  sampling.rs  server.rs  session.rs  tool.rs
crates/mcp-session-storage/: Cargo.toml
crates/mcp-session-storage/src/: dynamodb.rs  in_memory.rs  lib.rs  mod.rs  postgres.rs  sqlite.rs  traits.rs
crates/turul-http-mcp-server/: Cargo.toml  README.md
crates/turul-http-mcp-server/src/: cors.rs  handler.rs  json_rpc_responses.rs  lib.rs  mcp_session.rs  notification_bridge.rs  prelude.rs  protocol.rs  routes.rs  server.rs  session_handler.rs  sse.rs  stream_manager.rs  streamable_http.rs
crates/turul-mcp-aws-lambda/: Cargo.toml  README.md
crates/turul-mcp-aws-lambda/examples/: lambda-echo-server.rs
crates/turul-mcp-aws-lambda/src/: adapter.rs  builder.rs  cors.rs  error.rs  handler.rs  lib.rs  prelude.rs  server.rs  streaming.rs
crates/turul-mcp-aws-lambda/tests/: middleware_parity.rs
crates/turul-mcp-builders/: Cargo.toml  README.md
crates/turul-mcp-builders/src/: completion.rs  elicitation.rs  lib.rs  logging.rs  message.rs  notification.rs  prelude.rs  prompt.rs  protocol_impls.rs  resource.rs  root.rs  schemars_helpers.rs  tool.rs
crates/turul-mcp-client/: Cargo.toml  README.md
crates/turul-mcp-client/examples/: test-client-drop.rs
crates/turul-mcp-client/src/: client.rs  config.rs  error.rs  lib.rs  prelude.rs  session.rs  streaming.rs  transport.rs
crates/turul-mcp-client/tests/: http2_feature.rs  redirect_policy.rs  transport_concurrency.rs  wire_compliance.rs
crates/turul-mcp-derive/: Cargo.toml  README.md
crates/turul-mcp-derive/src/: lib.rs  (+15 more)
crates/turul-mcp-json-rpc-server/: Cargo.toml  README.md
crates/turul-mcp-oauth/: Cargo.toml  README.md
crates/turul-mcp-protocol/: Cargo.toml  README.md
crates/turul-mcp-protocol-2025-06-18/: Cargo.toml  README.md
crates/turul-mcp-server/: Cargo.toml  README.md
crates/turul-mcp-server-state-storage/: Cargo.toml  README.md
crates/turul-mcp-session-storage/: Cargo.toml  README.md
crates/turul-mcp-task-storage/: Cargo.toml  README.md
examples/alert-system-server/: Cargo.toml
examples/audit-trail-server/: Cargo.toml
examples/builders-showcase/: Cargo.toml  README.md
examples/calculator-add-function-server/: Cargo.toml
examples/calculator-add-manual-server/: Cargo.toml
examples/calculator-add-simple-server/: Cargo.toml
examples/calculator-add-simple-server-derive/: Cargo.toml
examples/client-initialise-report/: Cargo.toml
examples/client-initialise-server/: Cargo.toml
tests/: Cargo.toml  E2E_TEST_IMPLEMENTATION_STATUS.md  README.md  acronym_output_field_test.rs  basic_session_test.rs  builders_examples.rs  calculator_levels_integration.rs  client_drop_test.rs  client_examples.rs  client_integration_test.rs  client_server_request_response.rs  client_streaming_test.rs  content_type_negotiation.rs  custom_output_field_test.rs  derive_comprehensive_tool_tests.rs  derive_examples.rs  derive_schemars_integration_test.rs  derive_zero_config_output_schema_test.rs  dynamic_tools_e2e.rs  e2e_sse_message_flow.rs.disabled  e2e_sse_notification_roundtrip.rs  event_dispatcher_persistence.rs  framework_integration_tests.rs  http_server_examples.rs  integration_tests.rs  integration_tests.rs.disabled  lambda_examples.rs  lambda_streaming_real.rs  mcp_2025_11_25_features.rs  mcp_behavioral_compliance.rs  mcp_compliance_tests.rs  mcp_custom_struct_input_schema_test.rs  mcp_derive_macro_bug_detection.rs  mcp_explicit_vec_output_test.rs  mcp_runtime_capabilities_validation.rs  mcp_runtime_capability_validation.rs  mcp_specification_compliance.rs  mcp_tool_compliance.rs  mcp_tool_schema_runtime_sync_test.rs  mcp_vec_badly_named_tool_test.rs  (+19 more)
tests/consolidated/: compliance.rs  e2e_tests.rs  example_validation.rs  feature_tests.rs  schema_tests.rs
tests/elicitation/: Cargo.toml  build.rs
tests/prompts/: Cargo.toml  README.md  build.rs
tests/resources/: Cargo.toml  README.md  build.rs
tests/roots/: Cargo.toml  build.rs
tests/sampling/: Cargo.toml  build.rs
tests/shared/: Cargo.toml  README.md  build.rs
tests/test_helpers/: mod.rs
tests/tools/: Cargo.toml  build.rs
(+774 files in other folders)
