[workspace]
resolver = "3"
members = [
    "crates/mcp-json-rpc-server",
    "crates/mcp-protocol-2025-06-18",
    "crates/mcp-protocol",
    "crates/mcp-session-storage",
    "crates/http-mcp-server",
    "crates/mcp-server",
    "crates/mcp-derive",
    "crates/mcp-client",
    "examples/calculator-add-simple-server-derive",
    "examples/calculator-add-manual-server",
    "examples/calculator-add-function-server",
    "examples/calculator-add-builder-server",
    "examples/calculator-server",
    "examples/macro-calculator",
    "examples/comprehensive-types-example",
    "examples/mixed-approaches-example",
    "examples/all-tool-approaches-example",
    "examples/comprehensive-server",
    "examples/minimal-server",
    "examples/manual-tools-server",
    "examples/derive-macro-server",
    "examples/function-macro-server",
    "examples/notification-server",
    "examples/stateful-server",
    "examples/resource-server",
    "examples/tool-macro-example",
    "examples/enhanced-tool-macro-test",
    "examples/resource-macro-example",
    "examples/comprehensive-resource-example",
    "examples/spec-compliant-server",
    "examples/prompts-server",
    "examples/resources-server",
    "examples/completion-server",
    "examples/logging-server",
    "examples/pagination-server",
    "examples/performance-testing",
    "examples/dynamic-resource-server",
    "examples/version-negotiation-server",
    "examples/roots-server",
    "examples/sampling-server",
    "examples/elicitation-server",
    "examples/lambda-mcp-server",
    "examples/lambda-mcp-client",
    "examples/calculator-struct-output-example",
    "examples/universal-mcp-server",
    "examples/tools-server-macro",
    "examples/resources-server-macro",
    "examples/completion-server-macro",
    "examples/notifications-server-macro",
    "examples/sampling-server-macro",
    "examples/derive-macro-test",
    "examples/almost-zero-config-demo",
    "examples/simple-zero-config-demo", 
    "examples/zero-config-getting-started",
    "examples/working-universal-demo", 
    "examples/streamable-http-compliance",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nick Hortovanyi <nick@aussierobots.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/aussierobots/mcp-framework"
homepage = "https://github.com/aussierobots/mcp-framework"

[workspace.dependencies]
# Core dependencies shared across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"

# HTTP/Server dependencies
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.7", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
http = "1.3"
http-body-util = "0.1"
http-body = "1"
bytes = "1"

# Internal crate dependencies
mcp-json-rpc-server = { path = "crates/mcp-json-rpc-server" }
mcp-protocol-2025-06-18 = { path = "crates/mcp-protocol-2025-06-18" }
mcp-protocol = { path = "crates/mcp-protocol" }
mcp-session-storage = { path = "crates/mcp-session-storage" }
http-mcp-server = { path = "crates/http-mcp-server" }
mcp-server = { path = "crates/mcp-server" }
mcp-derive = { path = "crates/mcp-derive" }

# Additional dependencies for examples and tests
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.7", features = ["html_reports"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
] }
tempfile = "3"
toml = "0.9"
regex = "1.11"
base64 = "0.22"
urlencoding = "2.1"
url = "2.5"
parking_lot = "0.12"
rand = "0.9"
tracing-test = "0.2"

# AWS Lambda and AWS SDK dependencies
lambda_runtime = "0.14"
lambda_http = "0.16"
lambda-web = "0.2"
aws_lambda_events = "0.17"
aws-config = "1.8"
aws-sdk-dynamodb = "1"
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
pin-project = "1"

# YAML processing
serde_yaml = "0.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
