[package]
name = "turul-mcp-framework-integration-tests"
version.workspace = true
edition.workspace = true
autotests = false

[dependencies]
turul-mcp-derive = { workspace = true }
turul-mcp-server = { workspace = true, features = ["test-utils"] }
turul-mcp-protocol = { workspace = true }
turul-mcp-builders = { workspace = true }
turul-mcp-json-rpc-server = { workspace = true }
turul-mcp-session-storage = { workspace = true }
turul-http-mcp-server = { workspace = true }
turul-mcp-client = { workspace = true }
turul-mcp-aws-lambda = { path = "../crates/turul-mcp-aws-lambda" }
lambda_http = { workspace = true }
tokio = { workspace = true }
tokio-test = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
mcp-e2e-shared = { path = "shared" }
serial_test = "3.0"
portpicker = "0.1"
schemars = { workspace = true }

# === Consolidated test binaries (F2 optimization) ===
# Previously 39+ separate test binaries, now 7 consolidated + 1 standalone.
# Each consolidated binary groups related tests via #[path] mod imports.

[[test]]
name = "compliance"
path = "consolidated/compliance.rs"

[[test]]
name = "schema_tests"
path = "consolidated/schema_tests.rs"

[[test]]
name = "example_validation"
path = "consolidated/example_validation.rs"

[[test]]
name = "e2e_tests"
path = "consolidated/e2e_tests.rs"

[[test]]
name = "feature_tests"
path = "consolidated/feature_tests.rs"

# Standalone: uses mod test_helpers which requires crate-root relative path
[[test]]
name = "session_context_macro_tests"
path = "session_context_macro_tests.rs"

# Derive macro integration tests (moved from crates/turul-mcp-derive/tests/)
[[test]]
name = "derive_comprehensive_tool_tests"
path = "derive_comprehensive_tool_tests.rs"

[[test]]
name = "derive_schemars_integration_test"
path = "derive_schemars_integration_test.rs"

# Tasks E2E integration test (uses tasks-e2e-inmemory-server binary)
[[test]]
name = "tasks_e2e_inmemory"
path = "tasks_e2e_inmemory.rs"
