[package]
name = "mcp-protocol"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol (MCP) specification implementation - Current version alias"

[features]
default = []
server = ["mcp-protocol-2025-06-18/server"]
client = ["mcp-protocol-2025-06-18/client"]

[dependencies]
mcp-protocol-2025-06-18.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
