[package]
name = "mcp-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-level framework for building Model Context Protocol (MCP) servers"

[features]
default = ["http", "sse"]
http = ["http-mcp-server"]
sse = ["http-mcp-server/sse"]
postgres = ["mcp-session-storage/postgres"]
sqlite = ["mcp-session-storage/sqlite"]

[dependencies]
# Framework dependencies
mcp-json-rpc-server.workspace = true
mcp-protocol.workspace = true
mcp-protocol-2025-06-18.workspace = true
mcp-session-storage.workspace = true
http-mcp-server = { workspace = true, optional = true }

# Core dependencies
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid = { workspace = true, features = ["v4", "v7"] }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Dependencies for examples
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
futures.workspace = true

[[example]]
name = "client-initialise-server"
path = "examples/client-initialise-server.rs"

[[example]]
name = "client-initialise-report"
path = "examples/client-initialise-report.rs"
